--- a/src/statics/css/flexible.css
+++ b/src/statics/css/flexible.css
@@ -37,7 +37,7 @@
     COMMON 
 ------------------------ */
   .container {
-    margin: 0;
+    margin: 0 auto;
   }
   section {
     margin: calc(50px + 7vh) 0;
@@ -79,6 +79,7 @@
   }
   .about__cont p:first-of-type {
     margin: 6px 0 20px 0;
+    text-indent: initial;
   }
 
   /* ------------------------
@@ -103,4 +104,41 @@
   /* ------------------------
     CAREER 
 ------------------------ */
+  .career__cont {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 20px;
+    /**/
+    margin: 0 auto;
+    border-top:none;
+    text-align: center;
+    transition: opacity 0.8s ease, transform 0.8s ease;
+  }
+  .career__cont:last-of-type {
+    border-bottom: none;
+  }
+  .career__cont .career__logo {
+    grid-area: 1 / 1 / 2 / 2;
+    /**/
+    padding: 20px 0;
+    border-right: none;
+    border-bottom:none;
+    background: #fff;
+  }
+  .career__cont .career__logo img {
+    max-width: 300px;
+    height: 100%;
+  }
+  .career__cont .career__detail {
+    grid-area: 2 / 1 / 3 / 2;
+    /**/
+    padding: 0;
+    border-left: none;
+  }
+  .career__cont .career__title {
+    margin: 2% 0 5% 0;
+  }
+
+
 }
