--- a/src/statics/css/main.css
+++ b/src/statics/css/main.css
@@ -12,18 +12,31 @@
 section {
   min-height: 40vh;
   margin: 0 0 calc(50px + 3vh) 0;
-  padding: calc(50px + 3vh) 0 0 0;
+  padding: 3vh 0 0 0;
 }
 .sc__title {
   margin: 0 0 30px 0;
   font-size: calc(2.2rem + 0.1vw);
   font-weight: 700;
+  text-align: left;
   text-transform: uppercase;
 }
 .sc__content {
-  width: 90vw;
+  width: 100vw;
   margin: 0 auto;
+  padding: 0 2%;
   text-align: left;
+}
+
+.section {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s ease-in-out;
+}
+
+.section.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /* ------------------------
@@ -64,9 +77,11 @@ section {
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
+  padding-left: 30px;
 }
 .about__cont p {
   margin: 6px 0;
+  text-indent: -1.5rem;
 }
 .about__cont p:first-of-type {
   margin: 6px 0 20px 0;
@@ -85,6 +100,7 @@ section {
   padding: 6px 10px;
   border: 2px solid var(--defaultBlack);
   border-radius: 5px;
+  text-indent: initial;
 }
 
 /* ------------------------
@@ -94,3 +110,82 @@ section {
 /* ------------------------
     CAREER 
 ------------------------ */
+.career__period {
+  margin: 0 0 30px 0;
+  text-align: left;
+}
+.career__period span:nth-child(1) {
+  margin-right: 5px;
+  font-weight: 700;
+}
+.career__cont {
+  display: grid;
+  grid-template-columns: 30vw 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 0px;
+  align-items: start;
+  /**/
+  margin: 0;
+  border-top: 1px solid var(--borderSoft);
+  text-align: left;
+}
+.career__cont:last-of-type {
+  border-bottom: 1px solid var(--borderSoft);
+}
+.career__cont .career__logo {
+  grid-area: 1 / 1 / 3 / 2; 
+  /**/
+  display: inline-grid;
+  justify-items: center;
+  width: 100%;
+}
+.career__cont .career__logo img {
+  max-width: 50%;
+  height: 20vh;
+}
+.career__cont .career__detail {
+  grid-area: 1 / 2 / 2 / 3; 
+  /**/
+  padding: 0 0 0 2%;
+  border-left: 1px dashed var(--borderSoft);
+  text-align: left;
+}
+.career__cont .career__title {
+  margin:2% 0 0 0;
+}
+.career__cont .career__title span:nth-child(1) {
+  display: block;
+  font-size: calc(1.2rem + 0.1vw);
+  font-weight: 700;
+}
+.career__cont .career__title span:nth-child(2) {
+  display: block;
+}
+.career__cont .career__title span:nth-child(3),
+.career__cont .career__title span:nth-child(4) {
+  display: inline-block;
+  color: var(--txtSoft);
+}
+.career__cont .career__desc {
+  /**/
+  margin: 10px 0 2% 0;
+  text-align: left;
+}
+.career__cont .career__desc span {
+  display: inline-block;
+  margin: 10px 5px 0 0;
+}
+.career__cont .career__desc a {
+  color: var(--defaultRose);
+  text-decoration: none;
+}
+.career__cont .career__desc a:hover::before {
+  color: var(--defaultBlack);
+  font-family: "Font Awesome 5 Free";
+  font-size: .8rem;
+  font-weight: 900;
+  vertical-align: middle;
+  content: "\f0a4";
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
