--- a/src/statics/css/default.css
+++ b/src/statics/css/default.css
@@ -11,14 +11,12 @@
   font-size: 16px;
 
   /* Colorset */
-  --defaultBlack: #1a1a1a;
-  --defaultWhite: #f1efed;
-  --defaultYellow: #f1c698;
-  --defaultGreen: #15ce8b;
-  --defaultRose: #c77878;
-  --defaultEm: #e0801d;
+  --defaultB: #1a1a1a;
+  --defaultW: #f1efed;
+  --defaultY: #ffe4c7;
+  --defaultR: #c77878;
   --hoverOutline: #d8d8d8;
-  --txtMute: #d5d5d5;
+  --txtMute: rgba(26, 26, 26, 0.2);
   --txtSoft: #a2a2a2;
   --txtHover: #b5d0f4;
   --borderSoft: #bababa;
@@ -26,7 +24,7 @@
 body {
   margin: 0;
   background: #f1efed;
-  color: var(--defaultBlack);
+  color: var(--text-color);
   font-family: "Noto Sans", "Noto Sans KR", "Roboto", -apple-system, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -34,6 +32,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  background: var(--text-color);
+  color: var(--bg-color);
 }
 a {
   color: inherit;
@@ -53,12 +59,12 @@ li {
 }
 ::selection {
   /* color: #e2e2e2; */
-  color: var(--txtHover);
-  background: none;
+  color: #fff;
+  background: var(--txtHover);
 }
 .ico__check::before {
   margin-right: 5px;
-  color: var(--defaultGreen);
+  color: var(--text-em);
   font-family: "Font Awesome 5 Free";
   font-size: 1em;
   font-weight: 900;
@@ -66,14 +72,22 @@ li {
 }
 
 .ico__dot::before {
-  color: var(--defaultGreen);
+  color: var(--text-em);
   font-family: "Font Awesome 5 Free";
   font-size: .6rem;
   font-weight: 900;
   vertical-align: middle;
   content: "\f111";
 }
-
+.ico__hands::before {
+  margin-right: 5px;
+  color: var(--text-color);
+  font-family: "Font Awesome 5 Free";
+  font-size: 1em;
+  font-weight: 900;
+  opacity: .6;
+  content: "\f256";
+}
 .border__style {
   display: flex;
     justify-content: space-between;
@@ -83,4 +97,345 @@ li {
     margin-bottom: 1.625rem;
     padding-bottom: 0.625rem;
     border-bottom: 1px solid var(--defaultRose);
+}
+
+
+@keyframes bounce {
+  0%, 100% {
+      transform: translateY(0);
+  }
+  50% {
+      transform: translateY(-10px);
+  }
+}
+
+.ico__point {
+  display: inline-block;
+  animation: bounce 1.2s infinite ease-in-out;
+}
+.ico__point::before {
+  color: var(--text-em);
+  font-family: "Font Awesome 5 Free";
+  font-size: 4rem;
+  font-weight: 900;
+  vertical-align: middle;
+  content: "\f0a7";
+}
+
+
+/* ------------------------
+    COMMON 
+------------------------ */
+.container {
+  overflow: hidden;
+  margin: 0 auto;
+  width: calc(100% - 20px);
+  text-align: center;
+}
+section {
+  min-height: 40vh;
+  margin: 0 0 calc(50px + 3vh) 0;
+  padding: 3vh 0 0 0;
+}
+.sc__title {
+  margin: 0 0 30px 2%;
+  font-size: calc(2.2rem + 0.5vw);
+  font-weight: 700;
+  text-align: left;
+  text-transform: uppercase;
+}
+.sc__title::before {
+  color: var(--text-color);
+  font-family: "Font Awesome 5 Free";
+  font-size: 1.8rem;
+  font-weight: 900;
+  vertical-align: baseline;
+  content: '\f007';
+}
+section#about .sc__title::before {
+  content: '\f6ed';
+}
+section#projects .sc__title::before {
+  content: '\f121';
+}
+section#career .sc__title::before {
+  content: '\f0ae';
+}
+.sc__content {
+  /* width: 100vw; */
+  margin: 0 auto;
+  padding: 0 2%;
+  text-align: left;
+}
+
+.section {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s ease-in-out;
+}
+
+.section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* ------------------------
+    HOME 
+------------------------ */
+.home__cont {
+  text-align: center;
+}
+.home__cont section {
+  min-height: initial;
+  margin: 0;
+}
+.home__typo--lg {
+  font-size: calc(1rem + 15vw);
+  line-height: calc(22vw + 1vh);
+}
+.home__typo--md {
+  font-size: calc(1rem + 6vw);
+  line-height: calc(6.6vw + 1vh);
+}
+.home__typo--sm {
+  color: var(--txtMute);
+  font-size: calc(1rem + 4vw);
+  line-height: calc(11vw + 1vh);
+}
+.btn__resume {
+  position: relative;
+  padding-block-start: calc(4rem + 1vh);;
+  transition: 2.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.btn__resume .ico__point {
+  position: absolute;
+  top: 0;
+  left:47.5%;
+}
+.btn__resume .ico__point::before {
+  color: var(--text-em);
+}
+.btn__resume a {
+  display: inline-block;
+  width: 94px;
+  margin: 0 auto;
+  padding: 2px 10px 5px 10px;
+  border:1px solid var(--text-color);
+  border-radius: 25px;
+  color: var(--text-color);
+  font-size: 1.2rem;
+  text-align: center;
+  text-decoration: none;
+}
+.btn__resume a:hover {
+  background: var(--text-color);
+  color: var(--bg-color);
+}
+.btn__resume a::before {
+  content: 'Resume';
+}
+.btn__resume a:hover::before {
+  color:var(--text-em); 
+  font-family:"Font Awesome 5 Free";
+  font-size:1.2em; 
+  font-weight:900;
+  content: '\f554';
+}
+
+/* ------------------------
+    ABOUT 
+------------------------ */
+.about__cont {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: space-evenly;
+}
+.about__cont .about__img {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+@keyframes wave {
+  0% { transform: rotate(0deg); }
+  10% { transform: rotate(-5deg); }
+  20% { transform: rotate(-15deg); }
+  30% { transform: rotate(10deg); }
+  40% { transform: rotate(-10deg); }
+  50% { transform: rotate(8deg); }
+  60% { transform: rotate(-5deg); }
+  70% { transform: rotate(5deg); }
+  80% { transform: rotate(0deg); } 
+  100% { transform: rotate(0deg); }
+}
+
+.about__cont .about__img .ico__hands::before {
+  position: absolute;
+  right: 0;
+  font-size: calc(2rem + 3vw);
+  color:var(--defaultY);
+  opacity: 1;
+  animation: wave 1.8s ease-in-out infinite; /* 애니메이션 적용 */
+  transform-origin: 50% 80%; /* 손목을 중심으로 흔들리게 조정 */
+}
+.about__cont img {
+  width: 300px;
+}
+.about__cont .about__greeting {
+  display: inline-flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  padding-inline: 40px 10px;
+}
+.about__cont p {
+  margin: 6px 0;
+  text-indent: -1.5rem;
+}
+.about__cont p:first-of-type {
+  margin: 6px 0 20px 0;
+}
+.about__cont .ico__check::before {
+  color: var(--text-color);
+  opacity: .4;
+}
+
+/* ------------------------
+    SKILLS 
+------------------------ */
+.skill__cont--set {
+  margin: 20px 0 0 0;
+  text-align: center;
+}
+.skill__cont--set p {
+  display: inline-block;
+  margin: 5px;
+  padding: 6px 10px;
+  border: 2px solid var(--text-color);
+  border-radius: 5px;
+  text-indent: initial;
+}
+
+/* ------------------------
+    PROJECTS 
+------------------------ */
+.project__cont {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: flex-start;
+}
+.project__cont article {
+  display: inline-flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  /**/
+  width: 50%;
+  height: 30vh;
+  margin: 0 20px 20px 0;
+  padding: 20px;
+  border: 1px solid var(--borderSoft);
+  border-radius: 10px;
+  text-align: left;
+}
+/* ------------------------
+    CAREER 
+------------------------ */
+.career__period {
+  margin: 0 0 10px 0;
+  text-align: left;
+}
+.career__period span:nth-child(1) {
+  margin-right: 5px;
+  font-weight: 700;
+}
+.career__cont {
+  display: grid;
+  grid-template-columns: 30vw 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0;
+  grid-row-gap: 0px;
+  align-items: start;
+  /**/
+  margin: 0;
+  border-top: 1px solid var(--borderSoft);
+  text-align: left;
+}
+.career__cont:last-of-type {
+  border-bottom: 1px solid var(--borderSoft);
+}
+.career__cont .career__logo {
+  grid-area: 1 / 1 / 3 / 2; 
+  /**/
+  display: inline-grid;
+  justify-items: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
+.career__cont .career__logo img {
+  max-width: 50%;
+  max-height: 20vh;
+}
+.career__cont .career__detail {
+  grid-area: 1 / 2 / 2 / 3; 
+  /**/
+  padding: 0 0 0 2%;
+  /* border-left: 1px dashed var(--borderSoft); */
+  text-align: left;
+}
+.career__cont .career__detail  .border__style {
+  display: none;
+}
+.career__cont .career__title {
+  margin:2% 0 0 0;
+}
+.career__cont .career__title span:nth-child(1) {
+  display: block;
+  margin-block-end:1rem;
+  color:var(--text-em);
+  font-size: calc(1.2rem + 0.1vw);
+  font-weight: 700;
+}
+.career__cont .career__title span:nth-child(2) {
+  display: block;
+}
+.career__cont .career__title span:nth-child(3),
+.career__cont .career__title span:nth-child(4) {
+  display: inline-block;
+  color: var(--txtSoft);
+}
+.career__cont .career__desc {
+  /**/
+  margin: 1.2rem 0 2% 0;
+  text-align: left;
+}
+.career__cont .career__desc span {
+  display: inline-block;
+  margin: 10px 5px 0 0;
+  font-weight: 700;
+}
+.career__cont .career__desc p {
+  margin-block-start: 0.2em;
+  color: var(--text-em);
+  opacity: .6;
+}
+.career__cont .career__desc a {
+  color: var(--defaultRose);
+  text-decoration: none;
+}
+.career__cont .career__desc a:hover::before {
+  color: var(--text-color);
+  font-family: "Font Awesome 5 Free";
+  font-size: .8rem;
+  font-weight: 900;
+  vertical-align: middle;
+  content: "\f0a4";
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
