--- a/src/statics/css/flexible.css
+++ b/src/statics/css/flexible.css
@@ -4,18 +4,37 @@
 
 @media (max-width: 780px) {
   /* ------------------------
+    HEADER
+------------------------ */
+  nav {
+    grid-template-columns: 100px 1fr !important;
+    grid-template-rows: 44px !important;
+  }
+
+  nav .btn__home {
+    grid-area: 1 / 1 / 2 / 2 !important;
+  }
+  nav .nav__list {
+    grid-area: 1 / 2 / 2 / 3 !important;
+  }
+
+  /* ------------------------
     MENU-BAR 
 ------------------------ */
+  .cont__nav {
+    text-align: right;
+  }
   .btn__menubar {
     width: 5vw;
     height: 5vw;
     border: none;
-    color: var(--defaultBlack);
+    background: none;
+    color: var(--text-color);
     outline: none;
     cursor: pointer;
   }
   .btn__menubar::before {
-    color: var(--defaultBlack);
+    color: var(--text-color);
     font-family: "Font Awesome 5 Free";
     font-size: 2rem;
     font-weight: 900;
@@ -23,16 +42,87 @@
     cursor: pointer;
   }
   .btn__menubar:hover::before {
-    color: var(--defaultEm);
+    color: var(--text-em);
   }
 
   .btn__menubar img:hover {
     border-radius: 4px;
     outline: 3px solid var(--hoverOutline);
   }
+  /* 사이드 메뉴 기본 숨김 */
   .cont__menu {
-    display: none;
+    position: fixed;
+    top: 0;
+    right: -100%; /* 처음에는 화면 밖 */
+    width: 250px;
+    height: 100vh;
+    background: white;
+    transition: right 0.3s ease-in-out;
+    box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
   }
+
+  /* 메뉴가 열릴 때 */
+  .cont__menu.open {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    background: var(--bg-color);
+    z-index: 2000;
+  }
+  .cont__menu.open .nav__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    /**/
+    font-size: calc(1.8rem + 0.1vw);
+  }
+  .cont__menu.open .nav__list a {
+    padding: calc(1rem + 1vw) 0;
+    border-left: none;
+    font-size: calc(1.8rem + 0.1vw);
+  }
+
+  .cont__menu.open .btn__mode {
+    margin-block-start: 10px;
+  }
+
+  /* 사이드 메뉴 기본 숨김 */
+  .cont__menu {
+    position: fixed;
+    top: -100%;
+    width: 250px;
+    height: 100vh;
+    background: var(--bg-color);
+    transition: top 0.3s ease-in-out;
+    box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  /* 메뉴 닫힐 때 */
+  .cont__menu.closed {
+    top: -100%;
+    transition: top 0.3s ease-in-out;
+  }
+
+  /* 닫기 버튼 스타일 */
+  .btn__close {
+    display: block !important;
+    background: none;
+    border: none;
+    color: var(--text-color);
+    font-size: inherit;
+    cursor: pointer;
+  }
+  .btn__close:hover {
+    color: var(--text-em);
+  }
+
   /* ------------------------
     COMMON 
 ------------------------ */
@@ -44,9 +134,8 @@
   }
   .sc__title {
     margin: 0 0 10px 0;
-    font-size: calc(2.2rem + 0.1vw);
-    font-weight: 700;
-    text-transform: uppercase;
+    font-size: calc(2.2rem + 1vw);
+    text-align: center;
   }
   .sc__content {
     width: 90vw;
@@ -57,6 +146,9 @@
   /* ------------------------
     HOME 
 ------------------------ */
+  .home__cont {
+    text-align: center;
+  }
 
   /* ------------------------
     ABOUT 
@@ -64,21 +156,32 @@
   .about__cont {
     flex-direction: column;
     justify-content: center;
+
     /**/
     text-align: center;
   }
-  .about__cont img {
+
+  .about__cont .about__img {
+
+  }
+  .about__cont .about__img .ico__hands::before{
+    right: 20vw;
+    font-size: calc(3rem + 5vw);
+  }
+
+  .about__cont .about__img img {
     width: 60vw;
     margin: 0 auto;
   }
   .about__cont .about__greeting {
+    padding-inline: 10px;
     text-align: left;
   }
   .about__cont p {
     margin: 12px 0;
   }
   .about__cont p:first-of-type {
-    margin: 6px 0 20px 0;
+    margin: .5rem 0;
     text-indent: initial;
   }
 
@@ -93,7 +196,7 @@
     display: inline-block;
     margin: 5px;
     padding: 6px 10px;
-    border: 2px solid var(--defaultBlack);
+    border: 2px solid var(--text-color);
     border-radius: 5px;
   }
 
@@ -111,7 +214,7 @@
     grid-row-gap: 20px;
     /**/
     margin: 0 auto;
-    border-top:none;
+    border-top: none;
     text-align: center;
     transition: opacity 0.8s ease, transform 0.8s ease;
   }
@@ -123,22 +226,23 @@
     /**/
     padding: 20px 0;
     border-right: none;
-    border-bottom:none;
+    border-bottom: none;
     background: #fff;
   }
   .career__cont .career__logo img {
     max-width: 300px;
-    height: 100%;
   }
   .career__cont .career__detail {
     grid-area: 2 / 1 / 3 / 2;
     /**/
+    margin-block-start: 20px;
     padding: 0;
-    border-left: none;
+    /* border-left: none; */
   }
   .career__cont .career__title {
     margin: 2% 0 5% 0;
   }
-
-
+  .career__cont .career__desc {
+    margin: 0 0 10% 0;
+  }
 }
