--- a/src/statics/css/header.css
+++ b/src/statics/css/header.css
@@ -3,85 +3,90 @@
     HEADER 
 ------------------------ */
 header {
-    position: absolute;
-    top:0;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 nav {
-    display: grid;
-    grid-template-columns: calc(160px + 1vw) 1fr;
-    grid-template-rows: 44px;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    align-items: center;
-    /**/
-    width:100%;
-    margin: 0;
-    padding: 1rem 2rem;
+  display: grid;
+  grid-template-columns: calc(160px + 1vw) 1fr 120px;
+  grid-template-rows: 44px;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  align-items: center;
+  align-content: center;
+  /**/
+  width: 100%;
+  margin: 0;
+  padding: 1rem 2rem;
 }
 nav .btn__home {
-    grid-area: 1 / 1 / 2 / 2;
-    /**/
-    font-weight: 700;
+  grid-area: 1 / 1 / 2 / 2;
+  /**/
+  text-align: left;
+  font-weight: 700;
 }
 nav .btn__home a {
-    display: inline-block;
-    width: 42px;
-    height: 40px;
-    padding: 2px;
-    border-radius: 100%;
-    background: #1a1a1a;
-    color: #fff;
-    font-size: 1.4rem;
-    text-align: center;
-    line-height: 38px;
-    text-decoration: none;
+  display: inline-block;
+  width: 42px;
+  height: 40px;
+  padding: 2px;
+  border-radius: 100%;
+  background: var(--text-color);
+  color: var(--bg-color);
+  font-size: 1.4rem;
+  text-align: center;
+  line-height: 38px;
+  text-decoration: none;
 }
 nav .btn__home a:hover {
-    color: var(--defaultYellow);
+  background: var(--text-em);
 }
-nav .cont__nav {
-    grid-area: 1 / 2 / 2 / 3;
-    /**/
-    text-align: right;
+nav .nav__list {
+  grid-area: 1 / 2 / 2 / 3;
+  /**/
+  text-align: right;
 }
-nav .cont__nav a {
-    margin: 0;
-    padding: 0 2rem;
-    font-size: calc(1.4rem);
-    text-decoration: none;
+nav .nav__list a {
+  margin: 0;
+  padding: 0 2rem;
+  font-size: calc(1.4rem);
+  text-decoration: none;
+}
+nav .nav__list a:hover {
+  color: var(--text-em);
+}
+nav .btn__mode {
+  grid-area: 1 / 3 / 2 / 4;
+  /**/
+  text-align: center;
 }
 
-nav .cont__nav a:not(:first-of-type, :last-of-type) {
-    border-left: 3px dotted rgba(26, 26, 26, .12);
+nav .nav__list a:not(:first-of-type) {
+  border-left: 3px dotted var(--button-bg);
+}
+.nav__list span[class^="ico__"] {
+  display: none;
 }
 
-nav .cont__nav a:last-of-type {
-    display: inline-block;
-    width: 94px;
-    padding: 2px 10px 5px 10px;
-    border:1px solid var(--defaultBlack);
-    border-radius: 25px;
-    color: var(--defaultBlack);
-    font-size: 1.2rem;
-    text-align: center;
+button.toggle-btn {
+  margin-block-start: 6px;
+  padding: 8px 7px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--button-bg);
+  color: var(--button-text);
+  font-size: inherit;
+  cursor: pointer;
 }
-nav .cont__nav a:hover {
-    color: var(--defaultEm);
+
+button.toggle-btn:hover {
+  color: var(--text-em);
+  opacity: 0.8;
+  transition: opacity 0.3s, transform 0.3s;
 }
-nav .cont__nav a:last-of-type:hover {
-    background: var(--defaultBlack);
-    color: var(--defaultWhite);
-}
-nav .cont__nav a:last-of-type::before {
-    content: 'Resume';
-}
-nav .cont__nav a:last-of-type:hover::before {
-    color:var(--defaultYellow); 
-    font-family:"Font Awesome 5 Free";
-    font-size:1.2em; 
-    font-weight:900;
-    content: '\f554';
+
+/* 닫기 버튼 스타일 */
+.btn__close {
+  display: none;
 }
