--- a/src/statics/css/scroll.css
+++ b/src/statics/css/scroll.css
@@ -80,25 +80,26 @@
 /* ------------------------
   Scroll-top btn
 ------------------------ */
-.scroll__container{
+.scroll__container {
   position: fixed;
   right: 5%;
   bottom: 5%;
   z-index: 1;
 }
-#top{
+#top {
   width: 50px;
   height: 50px;
-  padding :15px 10px;
-  border: 1px solid rgb(210, 204, 193);
+  padding: 15px 10px;
+  border: 1px solid var(--bg-color);
   border-radius: 50%;
-  background-color :var(--defaultBlack);
-  color:#fff;
+  background-color: var(--text-color);
+  color: var(--bg-color);
   font-weight: bold;
   font-size: 1rem;
   cursor: pointer;
   outline: none;
 }
-#top:hover{
-  color :var(--defaultYellow);
+#top:hover {
+  border: 1px solid var(--text-em);
+  background: var(--text-em);
 }
