--- a/src/statics/css/default.css
+++ b/src/statics/css/default.css
@@ -137,6 +137,9 @@ section {
   margin: 0 0 calc(50px + 3vh) 0;
   padding: 3vh 0 0 0;
 }
+section#home, section#home .section {
+  padding: 0;
+}
 .sc__title {
   margin: 0 0 30px 2%;
   font-size: calc(2.2rem + 0.5vw);
