--- a/src/statics/css/default.css
+++ b/src/statics/css/default.css
@@ -78,7 +78,7 @@ li {
 .ico__dot::before {
   color: var(--text-em);
   font-family: "Font Awesome 5 Free";
-  font-size: .6rem;
+  font-size: 0.6rem;
   font-weight: 900;
   vertical-align: middle;
   content: "\f111";
@@ -89,27 +89,27 @@ li {
   font-family: "Font Awesome 5 Free";
   font-size: 1em;
   font-weight: 900;
-  opacity: .6;
+  opacity: 0.6;
   content: "\f256";
 }
 .border__style {
   display: flex;
-    justify-content: space-between;
-    -moz-column-gap: 0.2rem;
-    column-gap: 0.2rem;
-    width: 50px;
-    margin-bottom: 1.625rem;
-    padding-bottom: 0.625rem;
-    border-bottom: 1px solid var(--defaultRose);
+  justify-content: space-between;
+  -moz-column-gap: 0.2rem;
+  column-gap: 0.2rem;
+  width: 50px;
+  margin-bottom: 1.625rem;
+  padding-bottom: 0.625rem;
+  border-bottom: 1px solid var(--defaultRose);
 }
 
-
 @keyframes bounce {
-  0%, 100% {
-      transform: translateY(0);
+  0%,
+  100% {
+    transform: translateY(0);
   }
   50% {
-      transform: translateY(-10px);
+    transform: translateY(-10px);
   }
 }
 
@@ -125,7 +125,6 @@ li {
   vertical-align: middle;
   content: "\f0a7";
 }
-
 
 /* ------------------------
     COMMON 
@@ -143,32 +142,34 @@ section {
   padding-block-start: 3vh;
   padding-inline: var(--common-gutter);
 }
-section#home, section#home .section {
+section#home,
+section#home .section {
   padding-block: 0;
 }
 .sc__title {
-  margin-block-end:30px;
+  margin-block-end: 30px;
   font-size: calc(2.2rem + 0.5vw);
   font-weight: 700;
   text-align: left;
   text-transform: uppercase;
 }
 .sc__title::before {
+  padding-inline-end: 10px;
   color: var(--text-color);
   font-family: "Font Awesome 5 Free";
   font-size: 1.8rem;
   font-weight: 900;
   vertical-align: baseline;
-  content: '\f007';
+  content: "\f007";
 }
 section#about .sc__title::before {
-  content: '\f6ed';
+  content: "\f6ed";
 }
 section#projects .sc__title::before {
-  content: '\f121';
+  content: "\f121";
 }
 section#career .sc__title::before {
-  content: '\f0ae';
+  content: "\f0ae";
 }
 .sc__content {
   /* width: 100vw; */
@@ -213,13 +214,13 @@ section#career .sc__title::before {
 }
 .btn__resume {
   position: relative;
-  padding-block-start: calc(4rem + 1vh);;
+  padding-block-start: calc(4rem + 1vh);
   transition: 2.2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .btn__resume .ico__point {
   position: absolute;
   top: 10px;
-  left: calc((100% - 48px)/2);
+  left: calc((100% - 48px) / 2);
 }
 .btn__resume .ico__point::before {
   color: var(--text-em);
@@ -229,7 +230,7 @@ section#career .sc__title::before {
   width: 94px;
   margin: 0 auto;
   padding: 2px 10px 5px 10px;
-  border:1px solid var(--text-color);
+  border: 1px solid var(--text-color);
   border-radius: 25px;
   color: var(--text-color);
   font-size: 1.2rem;
@@ -239,16 +240,18 @@ section#career .sc__title::before {
 .btn__resume a:hover {
   background: var(--text-color);
   color: var(--bg-color);
+  transform: translateX(3px);
+  transition: opacity 0.3s, transform 0.3s;
 }
 .btn__resume a::before {
-  content: 'Resume';
+  content: "Resume";
 }
 .btn__resume a:hover::before {
-  color:var(--text-em); 
-  font-family:"Font Awesome 5 Free";
-  font-size:1.2em; 
-  font-weight:900;
-  content: '\f554';
+  color: var(--text-em);
+  font-family: "Font Awesome 5 Free";
+  font-size: 1.2em;
+  font-weight: 900;
+  content: "\f554";
 }
 
 /* ------------------------
@@ -268,23 +271,43 @@ section#career .sc__title::before {
   position: relative;
 }
 @keyframes wave {
-  0% { transform: rotate(0deg); }
-  10% { transform: rotate(-5deg); }
-  20% { transform: rotate(-15deg); }
-  30% { transform: rotate(10deg); }
-  40% { transform: rotate(-10deg); }
-  50% { transform: rotate(8deg); }
-  60% { transform: rotate(-5deg); }
-  70% { transform: rotate(5deg); }
-  80% { transform: rotate(0deg); } 
-  100% { transform: rotate(0deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(-5deg);
+  }
+  20% {
+    transform: rotate(-15deg);
+  }
+  30% {
+    transform: rotate(10deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(8deg);
+  }
+  60% {
+    transform: rotate(-5deg);
+  }
+  70% {
+    transform: rotate(5deg);
+  }
+  80% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .about__cont .about__img .ico__hands::before {
   position: absolute;
   right: 0;
   font-size: calc(2rem + 3vw);
-  color:var(--defaultY);
+  color: var(--defaultY);
   opacity: 1;
   animation: wave 1.8s ease-in-out infinite; /* 애니메이션 적용 */
   transform-origin: 50% 80%; /* 손목을 중심으로 흔들리게 조정 */
@@ -304,12 +327,12 @@ section#career .sc__title::before {
   text-indent: -1.3rem;
 }
 .about__desc p:not(:first-of-type)::before {
-  padding-inline-end: .3rem;
+  padding-inline-end: 0.3rem;
   color: var(--text-color);
   font-family: "Font Awesome 5 Free";
   font-size: 1rem;
   font-weight: 900;
-  opacity: .4;
+  opacity: 0.4;
   content: "\f058";
 }
 .about__desc p:first-of-type {
@@ -332,18 +355,21 @@ section#career .sc__title::before {
   text-indent: initial;
 }
 .skill__cont--set p::before {
-  padding-inline-end: .5rem;
+  padding-inline-end: 0.5rem;
   color: var(--text-em);
   font-family: "Font Awesome 5 Free";
   font-size: 1.2rem;
   font-weight: 900;
-  opacity: .4;
+  opacity: 0.4;
   content: "\f058";
   opacity: 1;
 }
 /* ------------------------
     PROJECTS 
 ------------------------ */
+#projects .ico__dot::before {
+  color: var(--text-color);
+}
 .project__cont {
   display: flex;
   flex-direction: row;
@@ -356,26 +382,25 @@ section#career .sc__title::before {
   flex-direction: column;
   flex-wrap: nowrap;
   align-content: center;
-  justify-content: center;
+  justify-content: flex-start;
   /**/
-  width: 50%;
-  height: 30vh;
-  margin: 0 20px 20px 0;
+  width: 80%;
+  margin: 0 auto;
   padding: 20px;
   border: 1px solid var(--borderSoft);
   border-radius: 10px;
   text-align: left;
 }
-.project__social { 
+.project__social {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin: 10px 0 0 0;
 }
 .project__social a {
   display: inline-block;
   padding: clamp(1.5rem, 5vw, 3rem);
-  border:1px solid var(--text-color);
+  border: 1px solid var(--text-color);
   border-radius: 2rem;
   background: var(--bg-color);
   color: var(--text-color);
@@ -383,6 +408,12 @@ section#career .sc__title::before {
   text-align: center;
   line-height: 30px;
   text-decoration: none;
+}
+.project__social a:hover {
+  background: var(--text-color);
+  color: var(--bg-color);
+  transform: translateY(-2px);
+  transition: opacity 0.3s, transform 0.3s;
 }
 .project__social a::after {
   padding: 0 1rem;
@@ -420,7 +451,7 @@ section#career .sc__title::before {
   border-bottom: 1px solid var(--borderSoft);
 }
 .career__cont .career__logo {
-  grid-area: 1 / 1 / 3 / 2; 
+  grid-area: 1 / 1 / 3 / 2;
   /**/
   display: inline-grid;
   justify-items: center;
@@ -434,22 +465,22 @@ section#career .sc__title::before {
   max-height: 20vh;
 }
 .career__cont .career__detail {
-  grid-area: 1 / 2 / 2 / 3; 
+  grid-area: 1 / 2 / 2 / 3;
   /**/
   padding: 0 0 0 2%;
   /* border-left: 1px dashed var(--borderSoft); */
   text-align: left;
 }
-.career__cont .career__detail  .border__style {
+.career__cont .career__detail .border__style {
   display: none;
 }
 .career__cont .career__title {
-  margin:2% 0 0 0;
+  margin: 2% 0 0 0;
 }
 .career__cont .career__title span:nth-child(1) {
   display: block;
-  margin-block-end:1rem;
-  color:var(--text-em);
+  margin-block-end: 1rem;
+  color: var(--text-em);
   font-size: calc(1.2rem + 0.1vw);
   font-weight: 700;
 }
@@ -469,12 +500,26 @@ section#career .sc__title::before {
 .career__cont .career__desc span {
   display: inline-block;
   margin: 10px 5px 0 0;
+  color: var(--text-em);
+  font-weight: 400;
+  opacity: 0.8;
+}
+.career__cont .career__desc p.career__desc__product {
+  margin-block-start: 2rem;
+  color: var(--text-em);
   font-weight: 700;
+  opacity: 0.6;
 }
 .career__cont .career__desc p {
-  margin-block-start: 0.2em;
-  color: var(--text-em);
-  opacity: .6;
+  width:90%;
+  margin-block: 0.2em 0;
+  padding: 0.3rem 0.8rem;
+  background: var(--button-bg);
+  color: var(--text-color);
+  border-radius: 20px;
+  font-size: 0.85rem;
+  transition: all 0.3s ease;
+  opacity: 0.6;
 }
 .career__cont .career__desc a {
   color: var(--defaultRose);
@@ -483,7 +528,7 @@ section#career .sc__title::before {
 .career__cont .career__desc a:hover::before {
   color: var(--text-color);
   font-family: "Font Awesome 5 Free";
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 900;
   vertical-align: middle;
   content: "\f0a4";
