--- a/src/statics/css/flexible.css
+++ b/src/statics/css/flexible.css
@@ -9,7 +9,7 @@
   nav {
     grid-template-columns: 60px 1fr !important;
     grid-template-rows: 44px !important;
-    padding-inline: 0;
+    padding-inline: 1rem;
   }
 
   nav .btn__home {
@@ -50,6 +50,9 @@
     border-radius: 4px;
     outline: 3px solid var(--hoverOutline);
   }
+  .btn__menubar:hover {
+    color: var(--text-em);
+  }
   /* 사이드 메뉴 기본 숨김 */
   .cont__menu {
     position: fixed;
@@ -71,6 +74,7 @@
     top: 0;
     left: 0;
     width: 100vw;
+    padding:0;
     background: var(--bg-color);
     z-index: 2000;
   }
@@ -85,12 +89,13 @@
     font-size: calc(1.8rem + 0.1vw);
   }
   .cont__menu.open .nav__list a {
+    flex-direction: column;
     padding: calc(1rem + 1vw) 0;
     border-left: none;
     font-size: calc(1.8rem + 0.1vw);
   }
-  nav .nav__list a:not(:first-of-type)::before,
-  nav .nav__list a:last-of-type::after {
+  nav .nav__list a::before,
+  nav .nav__list a::after {
     padding: 0;
     content: "";
   }
