--- a/src/statics/css/sideMenu.css
+++ b/src/statics/css/sideMenu.css
@@ -38,7 +38,7 @@
 }
 
 .nav-item::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -76,7 +76,7 @@
 }
 
 .floating-nav-item::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   right: 0;
@@ -93,7 +93,7 @@
 }
 
 .floating-nav-item.active::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -201,7 +201,7 @@
 
 .btn__menubar::before,
 .btn__menubar::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   width: 100%;
