--- a/src/statics/css/flexible.css
+++ b/src/statics/css/flexible.css
@@ -1,6 +1,11 @@
 /*250102*/
 
 @media (max-width: 1024px) {
+  .about__desc h1 span:not(.ico__hands) {
+    transition: var(--transition);
+    display: block;
+    margin: 0 0 0.5rem 0;
+  }
   .gallup__cont {
     transition: var(--transition);
     flex-direction: column;
@@ -10,7 +15,7 @@
     margin-block: 2vh 0;
   }
   .gallup__cont .gallup__blank {
-    width: 100%;
+    width: 96%;
     padding-inline: 10px;
   }
   .gallup__cont .gallup__desc {
@@ -30,11 +35,7 @@
 }
 
 @media (max-width: 960px) {
-  .about__desc h1 span:not(.ico__hands) {
-    transition: var(--transition);
-    display: block;
-    margin: 0 0 0.5rem 0;
-  }
+  
 }
 @media (max-width: 860px) {
   /* ------------------------
@@ -56,11 +57,12 @@
     margin: 0 auto;
   }
   .about__cont .about__greeting {
+    width: 96%;
     padding-inline: 10px;
     text-align: left;
   }
   .about__desc p {
-    margin-block: 18px 12px;
+    margin-block: 0.8rem 0.4rem;
   }
   .about__desc h1 {
     margin-block: 2rem;
@@ -239,19 +241,15 @@
 ------------------------ */
   .skill__cont--set {
     margin: 20px 0 0 0;
-    text-align: center;
-  }
-  .skill__cont--set p {
-    display: inline-block;
-    margin: 5px;
-    padding: 6px 10px;
-    border: 2px solid var(--text-color);
-    border-radius: 5px;
+    text-align: left;
   }
 
   /* ------------------------
     PROJECTS 
 ------------------------ */
+  .project__period {
+    text-align: center;
+  }
 
   /* ------------------------
     CAREER 
