--- a/src/statics/css/header.css
+++ b/src/statics/css/header.css
@@ -69,10 +69,10 @@ nav .nav__list a::before {
   color: var(--button-bg);
   /* content: "|"; */
 }
-nav .nav__list a:last-of-type::after {
+/* nav .nav__list a:last-of-type::after {
   padding: 0 1rem;
   content: "";
-}
+} */
 .nav__list span[class^="ico__"] {
   display: none;
 }
