--- a/src/statics/css/scroll.css
+++ b/src/statics/css/scroll.css
@@ -148,7 +148,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 2.5rem;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0;
   padding-block: 2rem;
   padding-inline: 0;
 }
