--- a/src/statics/css/header.css
+++ b/src/statics/css/header.css
@@ -56,6 +56,7 @@ nav .nav__list a {
 }
 nav .nav__list a:hover {
   color: var(--text-em);
+  transition: var(--transition);
 }
 nav .btn__mode {
   grid-area: 1 / 3 / 2 / 4;
